--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "electron-packager": "^12.1.0",
     "electron-reload": "^1.2.5",
     "electron-squirrel-startup": "1.0.0",
+    "electron-winstaller": "^2.6.4",
     "jasmine-core": "2.6.2",
     "jasmine-spec-reporter": "4.1.0",
     "karma": "1.7.0",
