--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 /BCODECOLORS-win32-ia32
+/BCODECOLORS-installer
 # compiled output
 /tmp
 /out-tsc
